<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ssid"
            android:inputType="text"
            android:hint="@string/ssid_hint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/password"
            android:inputType="text"
            android:hint="@string/password_hint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/category"
            android:inputType="textCapSentences"
            android:hint="@string/category_hint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/description"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/description_hint"
            android:minLines="2"
            android:maxLines="5"
            android:scrollbars="vertical"/>
</LinearLayout>