<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NetworksActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">


            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:layout_marginEnd="0dp"
                    android:layout_gravity="end"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:textStyle="bold"
                    android:id="@+id/button_add"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_network"
                    android:layout_marginEnd="0dp"
                    android:layout_gravity="end"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:textStyle="bold"
                    android:id="@+id/button_import"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:layout_marginEnd="0dp"
                    android:layout_gravity="end"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:textStyle="bold"
                    android:id="@+id/button_language"/>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_networks"/>

</android.support.design.widget.CoordinatorLayout>